k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goserver-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:  # Replace with your actual domain
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: goserver-service
                port:
                  number: 80
